fixed font spacing

--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -167,7 +167,7 @@ span.ticker {
     &.primary-small {
       color: #ffffff;
       font-size: 24px;
-      width: 12px;
+      // width: 12px;
     }
     &.dot-small {
       opacity: 0;
